# keba_keenergy

./: .coverage.mbp.home.72991.XhDzElVx.wgw3  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  __init__.py  _config.yml  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  hacs.json  index.html  manifest.json  mkdocs.yml  number.py  pyproject.toml  sensor.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: setup-project.yml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  parameters.json  security.yml
_includes/: head-custom.html
_layouts/: default.html
assets/css/: style.scss
assets/favicons/: site.webmanifest
blueprints/automation/keba_keenergy/: set_away_date_range.yaml
config/: configuration.yaml
custom_components/: __init__.py  helpers.py
custom_components/keba_keenergy/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  icons.json  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  water_heater.py
custom_components/keba_keenergy/translations/: de.json  en.json
docs/: index.md
docs/keba-keenergy/home-assistant/: donation.md
docs/keba-keenergy/home-assistant/wiki/: examples.md  faq.md  supported-devices.md
docs/stylesheets/: extra.css
keba-keenergy/home-assistant/changelog/: index.html
keba-keenergy/home-assistant/contributing/: index.html
keba-keenergy/home-assistant/donation/: index.html
keba-keenergy/home-assistant/wiki/examples/: index.html
keba-keenergy/home-assistant/wiki/faq/: index.html
keba-keenergy/home-assistant/wiki/supported-devices/: index.html
reports/: mypy.xml
scripts/: develop.sh  setup.sh
search/: search_index.json
site/_includes/: head-custom.html
site/_layouts/: default.html
tests/: __init__.py  api_data.py  conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_issues.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_water_heater.py
tests/snapshots/: test_binary_sensor.ambr  test_climate.ambr  test_coordinator.ambr  test_init.ambr  test_number.ambr  test_select.ambr  test_sensor.ambr  test_services.ambr  test_switch.ambr  test_water_heater.ambr
translations/: en.json
