[build-system]
requires = [
    "uv_build>=0.8.11",
]
build-backend = "uv_build"

[project]
name = "keba_keenergy"
description = "Home Assistant integration for heaters with a KEBA KeEnergy control system"
readme = "README.md"
authors = [
    { name = "Michael Hacker", email = "mh@superbox.one" },
]
maintainers = [
    { name = "Michael Hacker", email = "mh@superbox.one" },
]
license = { text = "Apache-2.0 license" }
keywords = [
    "component",
    "custom component",
    "custom integration",
    "keba",
    "keenergy",
    "hacs-component",
    "hacs-integration",
    "hacs-repository",
    "hacs",
    "hass",
    "home assistant",
    "home-assistant",
    "homeassistant",
    "integration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.13.2"
dependencies = [
    "keba_keenergy_api==1.*",
    "homeassistant>=2025.8.2",
]
version = "1.0.0"

[project.urls]
"Repository" = "https://github.com/superbox-dev/keba_keenergy"
"Issues" = "https://github.com/superbox-dev/keba_keenergy/issues"

[dependency-groups]
dev = [
    { include-group = "audit" },
    { include-group = "lint" },
]
audit = [
    "pip-audit>=2.9.0",
]
lint = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
    "types-PyYAML>=6.0.12.20250809",
    "yamllint>=1.37.1",
]

[tool.uv.build-backend]
module-name = "custom_components.keba_keenergy"
module-root = ""

[tool.black]
line-length = 120

[tool.mypy]
strict = true
junit_xml = "reports/mypy.xml"

[[tool.mypy.overrides]]
module = "keba_keenergy_api.*"
follow_untyped_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # any-type
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "I001",    # unsorted-imports
    "TRY003",  # raise-vanilla-args
]
